# template-python

./: .envrc.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: init-from-template.md
.cursor/rules/: git.mdc
.github/workflows/: code-quality.yml
src/template_python/: __init__.py
tests/: test_example.py
